--- a/.abf.yml
+++ b/.abf.yml
@@ -1,4 +1,5 @@
 removed_sources:
   UNIVERSAL-can-1.20110617.tar.gz: 14755e657fc50e16332556c8207eef362cb57368
-sources:
   UNIVERSAL-can-1.20120726.tar.gz: ceea2e2bad8373faebaf545f23ae187608135e29
+sources:
+  UNIVERSAL-can-1.20140124.tar.gz: b01cee6385f7d871357f3c36e40470a8295ada86
