Updated to 1.20140328 (by updates_builder)

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,5 +1,6 @@
 removed_sources:
   UNIVERSAL-can-1.20110617.tar.gz: 14755e657fc50e16332556c8207eef362cb57368
   UNIVERSAL-can-1.20120726.tar.gz: ceea2e2bad8373faebaf545f23ae187608135e29
-sources:
   UNIVERSAL-can-1.20140124.tar.gz: b01cee6385f7d871357f3c36e40470a8295ada86
+sources:
+  UNIVERSAL-can-1.20140328.tar.gz: c929622cbf968e09c146469533ab3bb8df347b23
